--- a/control-projects-frontend/src/app/views/config-view/create-rol-view/create-rol-view.component.html
+++ b/control-projects-frontend/src/app/views/config-view/create-rol-view/create-rol-view.component.html
@@ -5,17 +5,17 @@
   [validateForm]="true"
   (actionPrimaryEvent)="saveEvent($event)"
 >
-  <div class="create-sede" content>
+  <div class="create-rol" content>
     <div [formGroup]="viewFormGroup">
       <input-text-form
-        label="Nombre de la sede"
-        hint="Ingresa por favor el nombre de la sede"
+        label="Nombre del rol"
+        hint="Ingresa por favor el nombre del rol"
         [customFormGroup]="viewFormGroup"
         [isRequired]="true"
         [pattern]="GENERAL_CONSTANTS.REGEX_TEXT_LATAM"
         [maxLength]="GENERAL_CONSTANTS.MAX_LENGTH_NAME"
         [minLength]="GENERAL_CONSTANTS.MIN_LENGTH_NAME"
-        [(model)]="nombreSede"
+        [(model)]="nombreRol"
       ></input-text-form>
     </div>
   </div>
