feature: add edit facultad and create list

--- a/control-projects-frontend/src/app/components/custom-table/custom-table.component.html
+++ b/control-projects-frontend/src/app/components/custom-table/custom-table.component.html
@@ -30,7 +30,7 @@
           <p-tableCheckbox [value]="dataItem"></p-tableCheckbox>
         </td>
         <td *ngFor="let configItem of configuration?.dataConfig">
-          {{ configItem.key ? dataItem[configItem.key] : "" }}
+          {{ configItem.key ? printDataByKey(configItem.key, dataItem) : "" }}
         </td>
         <td *ngIf="configuration?.showActions">
           <button
