--- a/control-projects-frontend/src/app/views/professor-view/list-professor-view/list-professor-view.component.html
+++ b/control-projects-frontend/src/app/views/professor-view/list-professor-view/list-professor-view.component.html
@@ -1,1 +1,13 @@
-<p>listprofessor-view works!</p>
+<window-template>
+    <div class="list-professor" content>
+      <custom-table
+        [service]="professormanager"
+        methodGetData="findAllFaculty"
+        methodDelete="deleteFaculty"
+        [configuration]="configTable"
+        (editEvent)="editProfesor($event)"
+      >
+      </custom-table>
+    </div>
+  </window-template>
+  
