--- a/control-projects-frontend/src/app/views/report-view/report-list/report-list.component.html
+++ b/control-projects-frontend/src/app/views/report-view/report-list/report-list.component.html
@@ -1,103 +1,33 @@
-<window-template [title]="title" [showActions]="true" [validateForm]="true" style="padding-block: 10px;">
-  
-    <div class="create-catalog" content style="border:solid;border-color: white; border-radius:1px; border-width: 1.5px;">
-        
-        <p-table  [value]="customers">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Name</th>
-                    <th>Country</th>
-                    <th>Representative</th>
-                    <th>Status</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-customer>
-                <tr>
-                    <td>
-                        {{customer.name}}
-                    </td>
-                    <td>
-                        <span class="image-text">{{customer.country.name}}</span>
-                    </td>
-                    <td>
-                        <span class="image-text">{{customer.representative.name}}</span>
-                    </td>
-                    <td>
-                        <span [class]="'customer-badge status-' + customer.status">{{customer.status}}</span>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
-
-    </div>
-    
+<window-template [title]="title">
+  <div class="reports" content>
+    <p-tabView>
+      <p-tabPanel header="Proyectos por Profesor">
+        <div class="report-project-professor">
+          <div class="filters">
+            <custom-dropdown
+              methodGetData="findAllProfessor"
+              label="Profesor participante"
+              hint="Seleccione el profesor participante en los proyectos de investigación"
+              placeholder="Profesor"
+              [service]="profesorManager"
+              [(model)]="profesorDto"
+              (modelChange)="getReportProjectByProfessor()"
+              [keysToShow]="['cedulaProfesor', 'nombreProfesor']"
+            >
+            </custom-dropdown>
+          </div>
+          <div class="report">
+            <p-chart class="pie" type="pie" [data]="data"></p-chart>
+          </div>
+        </div>
+      </p-tabPanel>
+      <p-tabPanel header="Proyectos activos y terminados">
+        Content 2
+      </p-tabPanel>
+      <p-tabPanel header="Profesores por grupo de investigación">
+        Content 3
+      </p-tabPanel>
+      <p-tabPanel header="Presupuesto por facultad"> Content 4 </p-tabPanel>
+    </p-tabView>
+  </div>
 </window-template>
-
-<window-template [title]="title" [showActions]="true" [validateForm]="true" style="padding-block: 10px;">
-  
-    <div class="create-catalog" content style="border:solid;border-color: white; border-radius:1px; border-width: 1.5px;">
-        
-        <p-table  [value]="customers">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Name</th>
-                    <th>Country</th>
-                    <th>Representative</th>
-                    <th>Status</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-customer>
-                <tr>
-                    <td>
-                        {{customer.name}}
-                    </td>
-                    <td>
-                        <span class="image-text">{{customer.country.name}}</span>
-                    </td>
-                    <td>
-                        <span class="image-text">{{customer.representative.name}}</span>
-                    </td>
-                    <td>
-                        <span [class]="'customer-badge status-' + customer.status">{{customer.status}}</span>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
-
-    </div>
-    
-</window-template>
-<window-template [title]="title" [showActions]="true" [validateForm]="true" style="padding-block: 10px;">
-  
-    <div class="create-catalog" content style="border:solid;border-color: white; border-radius:1px; border-width: 1.5px;">
-        
-        <p-table  [value]="customers">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Name</th>
-                    <th>Country</th>
-                    <th>Representative</th>
-                    <th>Status</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-customer>
-                <tr>
-                    <td>
-                        {{customer.name}}
-                    </td>
-                    <td>
-                        <span class="image-text">{{customer.country.name}}</span>
-                    </td>
-                    <td>
-                        <span class="image-text">{{customer.representative.name}}</span>
-                    </td>
-                    <td>
-                        <span [class]="'customer-badge status-' + customer.status">{{customer.status}}</span>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
-
-    </div>
-    
-</window-template> 
