--- a/control-projects-frontend/src/app/views/investigation-group-view/create-investigation-group-view/create-investigation-group-view.component.html
+++ b/control-projects-frontend/src/app/views/investigation-group-view/create-investigation-group-view/create-investigation-group-view.component.html
@@ -29,6 +29,7 @@
         [customFormGroup]="viewFormGroup"
         [(model)]="grupoInvestigacion.nombreGrupoInvestigacion"
         [isRequired]="true"
+        [disabled]="isEdit"
       ></input-text-form>
 
       <custom-dropdown
